--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "estree-walker": "2.0.2",
+        "flutterwave-node-v3": "^1.3.0",
         "framer-motion": "^12.23.12",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.544.0",
